<?xml version="1.0" encoding="utf-8"?>
<resources>

   <!--  application -->
    <string name="app_name">MeetMe</string>
    <string name="app_id">1405768516336783</string> 
    <string name="action_settings">Settings</string>
      
    
    <!-- log in screen -->
    <string name="log_in_info">You must log in with facebook to use MeetMe</string>

    <!-- main menu -->
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="want_to_meet">I want to meet!</string>
    <string name="dont_want_to_meet">I don\'t want to meet after all :(</string>
    <string name="action_bar_map">Map</string>
    <string name="user_name">Anonymous</string>

   <!--  status change -->
	<string name="title_activity_status_change">Change status</string>
    <string name="want_to_meet_comment">What do you want to do?</string>
    <string name="comment">comment</string>
    <string name="when">When?</string>
    <string name="from">From</string>
    <string name="how_long">For</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="who_wants_to_meet">Who wants to meet?</string>
    <string name="hello_world">Hello world!</string>
    <string name="save_status">Save</string>
    
    <!--  friend list  -->
    <string name="title_action_bar_friends">Friend list </string>
    <string name="title_activity_friend_list">Friend list</string>
    <string name="no_active_friends_placeholder">No active friends.</string>
    
    <string name="available_already">Available now for</string>
    <string name="available_in">Available in</string>
    <string name="available_for">for</string>
    
    <string name="person_image_content">Picture</string>
    <!--  map  -->
    <string name="title_activity_location_view">Friends\' locations</string>
    
 
    
    <string name="service_name">MeetMeService</string>

</resources>
