<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BodyContainer"
    tools:context=".MainMenuActivity" 
    android:gravity="center">

    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <TextView
        android:id="@+id/user_name"
        android:text="@string/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>        	
    	
        

        
        <Button
	    android:id="@+id/statusSetButton"
	    android:layout_gravity="center_horizontal"
	    android:text="@string/want_to_meet"
	    style="@style/WantToMeetButton"  />
	    
        <Button
	    android:id="@+id/statusCancelButton"
	    android:layout_gravity="center_horizontal"
	    android:text="@string/dont_want_to_meet"
	    style="@style/DontWantToMeetButton"  />
        
	    <!-- <Button
	       	android:id="@+id/friendListButton"
	    	android:text="@string/who_wants_to_meet"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginTop="50dp"	    
	    	style="@style/BigButton"
	    /> -->
	    
	    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        />

    </LinearLayout>



</RelativeLayout>
